--- a/templates/login.html
+++ b/templates/login.html
@@ -644,7 +644,7 @@
                     confirmButtonText: "View Portfolio",
                   }).then(() => {
                     // Redirect to dashboard
-                    window.location.href = "/dashboard";
+                    window.location.href = "/";
                   });
                 } else {
                   Swal.update({
