--- a/templates/register.html
+++ b/templates/register.html
@@ -1022,7 +1022,7 @@
                     confirmButtonText: "Go to Dashboard",
                   }).then(() => {
                     // Redirect to dashboard or home page
-                    window.location.href = "/dashboard";
+                    window.location.href = "/";
                   });
                 } else {
                   Swal.update({
